--- a/pages/4717.html
+++ b/pages/4717.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6562/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -515,7 +514,7 @@ margin-left: 0em;
 <h2 id='definition'>Definition</h2>
 
 <p>Given an <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>L</mi><mo>⊣</mo><mi>R</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>X</mi><mover><munder><mo>⟵</mo><mi>R</mi></munder><mover><mo>⟶</mo><mi>L</mi></mover></mover><mi>Y</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>L</mi><mo>⊣</mo><mi>R</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>X</mi><mover><munder><mo>⟵</mo><mi>R</mi></munder><mover><mo>⟶</mo><mi>L</mi></mover></mover><mi>Y</mi></mrow><annotation encoding='application/x-tex'>
   (L \dashv R)
   \;\colon\;
   X
@@ -523,9 +522,9 @@ margin-left: 0em;
   Y
 
 </annotation></semantics></math></div>
-<p>there is a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a> (or more generally, a <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/2-morphism'>morphism</a>) <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>id</mi> <mi>X</mi></msub><mo>→</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>\eta\colon id_X \to R \circ L</annotation></semantics></math>, called the <strong>unit</strong> of the adjunction. (A reason for the name is that <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>R \circ L</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a>, which is a kind of <a class='existingWikiWord' href='/nlab/show/monoid'>monoid object</a>, and <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi></mrow><annotation encoding='application/x-tex'>\eta</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/identity+element'>identity</a> of this monoid. Since ‘identity’ in this context would suggest an <a class='existingWikiWord' href='/nlab/show/identity+natural+transformation'>identity natural transformation</a>, we use the synonym ‘unit’.)</p>
+<p>there is a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a> (or more generally, a <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/2-morphism'>morphism</a>) <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi><mo lspace='verythinmathspace'>:</mo><msub><mi>id</mi> <mi>X</mi></msub><mo>→</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>\eta\colon id_X \to R \circ L</annotation></semantics></math>, called the <strong>unit</strong> of the adjunction. (A reason for the name is that <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>R \circ L</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a>, which is a kind of <a class='existingWikiWord' href='/nlab/show/monoid'>monoid object</a>, and <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>η</mi></mrow><annotation encoding='application/x-tex'>\eta</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/identity+element'>identity</a> of this monoid. Since ‘identity’ in this context would suggest an <a class='existingWikiWord' href='/nlab/show/identity+natural+transformation'>identity natural transformation</a>, we use the synonym ‘unit’.)</p>
 
-<p>Similarly, there is <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-morphism <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi><mo lspace='verythinmathspace'>:</mo><mi>L</mi><mo>∘</mo><mi>R</mi><mo>→</mo><msub><mi>id</mi> <mi>Y</mi></msub></mrow><annotation encoding='application/x-tex'>\epsilon\colon L \circ R \to id_Y</annotation></semantics></math>, called the <strong>counit</strong> of the adjunction. (This is the co-identity of the <a class='existingWikiWord' href='/nlab/show/comonad'>comonad</a> <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>∘</mo><mi>R</mi></mrow><annotation encoding='application/x-tex'>L \circ R</annotation></semantics></math>.)</p>
+<p>Similarly, there is <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-morphism <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi><mo lspace='verythinmathspace'>:</mo><mi>L</mi><mo>∘</mo><mi>R</mi><mo>→</mo><msub><mi>id</mi> <mi>Y</mi></msub></mrow><annotation encoding='application/x-tex'>\epsilon\colon L \circ R \to id_Y</annotation></semantics></math>, called the <strong>counit</strong> of the adjunction. (This is the co-identity of the <a class='existingWikiWord' href='/nlab/show/comonad'>comonad</a> <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>∘</mo><mi>R</mi></mrow><annotation encoding='application/x-tex'>L \circ R</annotation></semantics></math>.)</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -537,7 +536,7 @@ margin-left: 0em;
 
 <h3 id='relation_to_monads'>Relation to monads</h3>
 
-<p>Every <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a> <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>L</mi><mo>⊣</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(L \dashv R)</annotation></semantics></math> gives rise to a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mo>≔</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>T \coloneqq R \circ L</annotation></semantics></math>. The <a class='existingWikiWord' href='/nlab/show/unit+of+a+monad'>unit of this monad</a> <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>id</mi><mo>→</mo><mi>T</mi></mrow><annotation encoding='application/x-tex'>id \to T</annotation></semantics></math> is the unit of the adjunction, <math class='maruku-mathml' display='inline' id='mathml_18c54d9f525408553fe2998fb9202cbba43f44a8_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>id</mi><mo>→</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>id \to R \circ L</annotation></semantics></math>.</p>
+<p>Every <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a> <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>L</mi><mo>⊣</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(L \dashv R)</annotation></semantics></math> gives rise to a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mo>≔</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>T \coloneqq R \circ L</annotation></semantics></math>. The <a class='existingWikiWord' href='/nlab/show/unit+of+a+monad'>unit of this monad</a> <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>id</mi><mo>→</mo><mi>T</mi></mrow><annotation encoding='application/x-tex'>id \to T</annotation></semantics></math> is the unit of the adjunction, <math class='maruku-mathml' display='inline' id='mathml_0c41ff9b7e2e86ed29423a8d49ef6b1165f53a7f_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>id</mi><mo>→</mo><mi>R</mi><mo>∘</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>id \to R \circ L</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -560,6 +559,8 @@ margin-left: 0em;
 
 <li>
 <p><strong>unit of an adjunction</strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/derived+adjunction+unit'>derived adjunction unit</a></p>
 </li>
 
 <li>
@@ -595,19 +596,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 11, 2017 16:02:08 
-  by <a class="existingWikiWord" href="/nlab/show/Peter+Heinig">Peter Heinig</a>
-  (84.183.88.168)
+  <p>
+  Last revised on July 11, 2018 at 09:24:54.
+  See the <a href="https://ncatlab.org/nlab/history/unit of an adjunction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/unit+of+an+adjunction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/unit+of+an+adjunction/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/unit+of+an+adjunction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/unit+of+an+adjunction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/unit+of+an+adjunction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/unit+of+an+adjunction/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/unit+of+an+adjunction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/unit+of+an+adjunction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/unit of an adjunction/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/unit+of+an+adjunction" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/unit+of+an+adjunction" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/unit+of+an+adjunction" id="view_source" rel="nofollow">Source</a>
