--- a/pages/19522.html
+++ b/pages/19522.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      double category of squares in nLab
+      double category of squares &gt; history in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      double category of squares
+      double category of squares &gt; history
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8729/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8729/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,268 +307,29 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
-
-<h4 id='2category_theory'>2-Category theory</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/2-category+theory'>2-category theory</a></strong></p>
-
-<h2 id='definitions'>Definitions</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/strict+2-category'>strict 2-category</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/enriched+bicategory'>enriched bicategory</a></p>
-</li>
-</ul>
-
-<h2 id='transfors_between_2categories'>Transfors between 2-categories</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/pseudofunctor'>pseudofunctor</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/lax+functor'>lax functor</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>equivalence of 2-categories</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/strict+2-natural+transformation'>2-natural transformation</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/lax+natural+transformation'>lax natural transformation</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/icon'>icon</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/modification'>modification</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Yoneda+lemma+for+bicategories'>Yoneda lemma for bicategories</a></p>
-</li>
-</ul>
-
-<h2 id='morphisms_in_2categories'>Morphisms in 2-categories</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/fully+faithful+morphism'>fully faithful morphism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/faithful+morphism'>faithful morphism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/conservative+morphism'>conservative morphism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/pseudomonic+morphism'>pseudomonic morphism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/discrete+morphism'>discrete morphism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/eso+morphism'>eso morphism</a></p>
-</li>
-</ul>
-
-<h2 id='structures_in_2categories'>Structures in 2-categories</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/mate'>mate</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/cartesian+object'>cartesian object</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/fibration+in+a+2-category'>fibration in a 2-category</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/codiscrete+cofibration'>codiscrete cofibration</a></p>
-</li>
-</ul>
-
-<h2 id='limits_in_2categories'>Limits in 2-categories</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-limit'>2-limit</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-pullback'>2-pullback</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/comma+object'>comma object</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/inserter'>inserter</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/inverter'>inverter</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/equifier'>equifier</a></p>
-</li>
-</ul>
-
-<h2 id='structures_on_2categories'>Structures on 2-categories</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-monad'>2-monad</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/lax-idempotent+2-monad'>lax-idempotent 2-monad</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-monad'>pseudomonad</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/pseudoalgebra+for+a+2-monad'>pseudoalgebra for a 2-monad</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/monoidal+bicategory'>monoidal 2-category</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/cartesian+bicategory'>cartesian bicategory</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gray+tensor+product'>Gray tensor product</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-category+equipped+with+proarrows'>proarrow equipment</a></p>
-</li>
-</ul>
-<div>
-<p>
-  <a href='/nlab/edit/2-category+theory+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
-</div>
-</div>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>Given a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, it induces a <a class='existingWikiWord' href='/nlab/show/double+category'>double category</a> <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sq</mi><mo stretchy='false'>(</mo><mi>𝒞</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Sq(\mathcal{C})</annotation></semantics></math> whose</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/object'>objects</a> are the objects of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>;</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/horizontal+morphism'>horizontal morphisms</a> are the <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>;</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/horizontal+morphism'>vertical morphisms</a> are also the <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>;</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a> are the <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> between the <a class='existingWikiWord' href='/nlab/show/composition'>compositions</a> of the <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a>.</p>
-</li>
-</ul>
-
-<h2 id='examples'>Examples</h2>
-
-<ul>
-<li>The double category <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sq</mi><mo stretchy='false'>(</mo><mi>Cat</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Sq(Cat)</annotation></semantics></math> of squares in <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a> receives a <a class='existingWikiWord' href='/nlab/show/double+functor'>double pseudofunctor</a> <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ho</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ho(-)</annotation></semantics></math> from the <a class='existingWikiWord' href='/nlab/show/double+category+of+model+categories'>double category of model categories</a> (<a href='double+category+of+model+categories#HomotopyDoublePseudofunctor'>this Prop.</a>) which on objects sends a <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> to its <a class='existingWikiWord' href='/nlab/show/homotopy+category+of+a+model+category'>homotopy category of a model category</a>, and which on morphisms sends a left/right <a class='existingWikiWord' href='/nlab/show/Quillen+adjunction'>Quillen functor</a> to its left/right <a class='existingWikiWord' href='/nlab/show/derived+functor'>derived functor</a>.</li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<p>The construction goes back to</p>
-
-<ul>
-<li id='Ehresmann63'><a class='existingWikiWord' href='/nlab/show/Charles+Ehresmann'>Charles Ehresmann</a>, <em>Catégories structurées</em>, Annales scientifiques de l’École Normale Supérieure. Vol. 80. No. 4. Elsevier, 1963 (<a href='https://eudml.org/doc/urn:eudml:doc:81794'>EUDML:81794</a>)</li>
-</ul>
-
-<p>
-</p>
+    <blockquote>
+<p>see <a class='existingWikiWord' href='/nlab/show/quintet+construction'>quintet construction</a></p>
+</blockquote>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on July 12, 2018 at 05:55:51.
-  See the <a href="https://ncatlab.org/nlab/history/double category of squares" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on July 12, 2018 at 12:11:59.
+  See the <a href="https://ncatlab.org/nlab/history/double category of squares &gt; history" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/double+category+of+squares" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  | <a href="https://ncatlab.org/nlab/show/double category of squares/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/double+category+of+squares+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/double+category+of+squares+%3E+history/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/double+category+of+squares+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/double+category+of+squares+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/double category of squares &gt; history/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/double+category+of+squares" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/double+category+of+squares+%3E+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/double+category+of+squares" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/double+category+of+squares+%3E+history" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/double+category+of+squares" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/double+category+of+squares+%3E+history" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
